--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,11 @@ services:
     volumes:
       - .:/app
     working_dir: /app
+    depends_on:
+      - kvs
+  kvs:
+    image: redis:7.0.4
+    ports:
+      - 6379:6379
+    expose:
+      - 6379
