--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gen",
+  "name": "express-socketio-redis-sample",
   "version": "0.0.0",
   "engines": {
     "node": "16.x"
@@ -9,11 +9,13 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@socket.io/redis-adapter": "^7.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
-    "redis": "^4.3.0"
+    "redis": "^4.3.0",
+    "socket.io": "^4.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
