--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,7 @@ version: '3.5'
 
 services:
   app:
-    image: node:16.13-slim
-    command: [npm, start]
+    build: .
     ports:
       - 3000:3000
     expose:
