--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jade": "^1.11.0",
     "morgan": "~1.9.1",
     "redis": "^4.3.0",
+    "rxjs": "^7.5.6",
     "socket.io": "^4.5.1"
   },
   "devDependencies": {
