--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,9 @@ services:
       - 6379:6379
     expose:
       - 6379
+  doc:
+    image: asyncapi/studio
+    ports:
+      - 8080:80
+    expose:
+      - 8080
