--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,14 @@ version: '3.5'
 services:
   app:
     build: .
+    init: true
     ports:
       - 3000:3000
+    entrypoint:
+      - nodemon
+      - --signal
+      - SIGTERM
+      - ./bin/www
     expose:
       - 3000
     volumes:
